--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.3",
     "groq-sdk": "^0.9.1",
+    "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.0"
