--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@tremor/react": "^3.18.6",
     "@vercel/postgres": "^0.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "groq-sdk": "^0.9.1",
+    "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
