--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tremor/react": "^3.18.6",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
